wk_taa_taaqa/src/objects/S2S_LogFile__c.object
<CustomObject>
    <fields>
        <fullName>API_Request_Time__c</fullName>
        <label>API Request Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>API_Request_Time_sec__c</fullName>
        <label>API Request Time(sec)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Response_Code__c</fullName>
        <label>API Response Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>API_Response_Time__c</fullName>
        <label>API Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>API_Response_Time_sec__c</fullName>
        <label>API Response Time(sec)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <label>API Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Type__c</fullName>
        <label>API Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PFX Book Promo</fullName>
                </value>
                <value>
                    <fullName>One Force</fullName>
                </value>
                <value>
                    <fullName>S2S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log_Info__c</fullName>
        <label>Request Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>S2S_LogFiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>S2S_LogFiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ML</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>SFS</fullName>
                </value>
                <value>
                    <fullName>TAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>API LogFile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>API_Type__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Source__c</columns>
        <columns>Log_Info__c</columns>
        <columns>API_Response__c</columns>
        <columns>API_Response_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Todays_logs</fullName>
        <columns>NAME</columns>
        <columns>API_Type__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>Source__c</columns>
        <columns>Log_Info__c</columns>
        <columns>API_Response__c</columns>
        <columns>API_Response_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Todays logs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X6000_responses</fullName>
        <columns>NAME</columns>
        <columns>Related_Account__c</columns>
        <columns>API_Response_Code__c</columns>
        <columns>API_Type__c</columns>
        <columns>Log_Info__c</columns>
        <columns>Related_Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>API_Response_Code__c</field>
            <operation>equals</operation>
            <value>6000</value>
        </filters>
        <label>6000 responses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S2S-{0000}</displayFormat>
        <label>S2S LogFile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API LogFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>